# aavass

./: Aavaas - Apartment Complex Management_PRD_v1.3.docx  README.md  SPEC_TEMPLATE.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2234a93fa075_initial_schema.py  31ba897c76c6_module_3_maintenance_billing.py  5fc2b3fcd07b_flat_owner_tenant.py  65fb1510b01d_reporting_owner_portal_notifications.py  85b94fc0f4bc_seed_permission_catalog.py  f1c3a8f2b6d1_special_collections_and_expenditures.py
backend/app/: main.py
backend/app/api/: deps.py  deps_flat.py  deps_owner.py
backend/app/core/: config.py  cookies.py  errors.py  notification_templates.py  pagination.py  permissions.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  apartment_complex.py  association_member.py  audit_log.py  billing_cycle.py  expenditure.py  export_job.py  flat.py  flat_ownership.py  grace_period_config.py  job.py  maintenance_due.py  maintenance_formula.py  notification_template.py  owner.py  password_reset_token.py  payment.py  permission.py  receipt.py  receipt_counter.py  refresh_token.py  role.py  role_permission.py  special_collection.py  special_collection_due.py  tenant.py  tower.py  user.py
backend/app/schemas/: association_member.py  audit_log.py  auth.py  billing_cycle.py  common.py  complex.py  dashboard.py  expenditure.py  export_job.py  flat.py  grace_period.py  job.py  owner.py  (+11 more)
backend/tests/: conftest.py  factories.py
(+361 files in other folders)
