[project]
name = "aavaas-backend"
version = "0.1.0"
description = "Aavaas apartment-complex management system — backend API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pyjwt==2.10.1",
    "argon2-cffi==23.1.0",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
    "greenlet==3.1.1",
    "boto3==1.35.90",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.1",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.14.1",
    "testcontainers[postgres]==4.9.1",
    "asgi-lifespan==2.1.0",
    "moto[s3]==5.0.26",
    "requests==2.32.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = []
ignore_missing_imports = true
